--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,10 +10,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 
-ARG NPM_TOKEN
-ENV NPM_TOKEN=$(NPM_TOKEN)
-
-#RUN npm install
+RUN npm install
 
 # add app
 COPY . ./
