--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "cypress": "^5.6.0",
+    "cypress-sql-server": "^1.0.0",
     "cypress-iframe": "^1.0.1",
     "cypress-react-selector": "^2.2.0",
     "mochawesome": "^6.1.1",
